--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "prebuild": "cp -r assets/* public/assets/",
     "build": "next build",
     "start": "next start"
   },
